--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 quarkus.application.name= "app test cea"
 
-quarkus.http.port= 8082
+quarkus.http.port=8082
 
+
+//quarkus.http.ssl.certificate.files=/path/cert.pem
+
+//quarkus.http.ssl.certificate.key-files=/path/key.pem
 
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
@@ -10,4 +14,4 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/cea-arme
 quarkus.datasource.jdbc.max-size=16
 
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
