--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,19 @@
       <artifactId>quarkus-rest-client</artifactId>
       <version>3.6.0</version>
     </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-reactive</artifactId>
-    </dependency>
     <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-jsonb -->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jsonb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jsonb</artifactId>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-resteasy-jackson -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
